Hangfire blog workouts

--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -1,8 +1,9 @@
 <div class="bs-sidenav hidden-print">
 	<!-- Begin MailChimp Signup Form -->
-	<h4>Subscribe to newsletter</h4>
+	<h4>Subscribe to updates</h4>
 	<div>
-		<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate style="padding:0;">
+		
+		<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate style="padding:0;margin-bottom:10px;">
 			<label for="mce-EMAIL">Email Address</label>
 			<div class="input-group">
 	      		<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
@@ -11,5 +12,8 @@
 	      		</span>
 	    	</div>
 		</form>
+		<p>
+			Subscribe to receive weekly blog updates. You will be able to unsubscribe at any time.
+		</p>
 	</div>
 </div>
