--- a/_includes/blog/recent.html
+++ b/_includes/blog/recent.html
@@ -1,34 +1,29 @@
 <div class="bs-sidenav hidden-print">
-    <h4>Recent Posts</h4>
-    <div>
-    {% for post in site.posts  %}
-        {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-        {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
-        {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
-        {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
-
-        {% if forloop.first %}
-        <h5 id="{{ this_year }}-{{ this_month }}-ref">{{ this_month }} {{this_year}}</h5>
-        <ul>
-        {% endif %}
-
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-
-        {% if forloop.last %}
-        </ul>
-        {% else %}
-            {% if this_year != next_year %}
-            </ul>
-            <h5 id="{{ next_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h5>
-            <ul>
-            {% else %}    
-                {% if this_month != next_month %}
-                </ul>
-                <h5 id="{{ this_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h5>
-                <ul>
-                {% endif %}
-            {% endif %}
-        {% endif %}
-    {% endfor %}
-    </div>
+    <h4>Posts</h4>
+    <ul class="nav">
+        <li class="{% if page.title == 'Hangfire Blog' %}active{% endif %}">
+            <a href="/blog/">All Posts</a>
+        </li>
+        <li class="{% if page.title == 'Hangfire Releases' %}active{% endif %}">
+            <a href="/blog/releases/">Hangfire Releases</a>
+        </li>
+    </ul>
+    <div><h4>Recent Releases</h4></div>
+    <ul class="nav">
+        {% for post in site.categories.release limit:5 %}
+        <li class="{% if page.title == post.title %}active{% endif %}">
+            <a href="{{ post.url }}">Version {{ post.version }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+    <div><h4>Other Posts</h4></div>
+    <ul class="nav">
+        {% for post in site.posts %}
+        {% unless post.categories contains 'release' %}
+        <li class="{% if page.title == post.title %}active{% endif %}">
+            <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+        {% endunless %}
+        {% endfor %}
+    </ul>
 </div>
