--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,7 +6,13 @@ active: blog
 <div class="container">
 	<div class="row">
 		<div class="col-md-8">
-		<h1 class="page-header">{{ page.title }}</h1>
+			<h1 class="page-header">
+				<span class="rss-link">
+					<i class="fa fa-rss"></i>
+					<a href="http://feeds.feedburner.com/hangfireio">rss feed</a>
+				</span>
+				{{ page.title }}
+			</h1>
 			<div class="posts">
 				{{ content }}
 			</div>
