--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <meta name="twitter:image:src" content="http://hangfire.io/img/dashboard-sm.png">
 
         <link href="/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="/css/lightbox.css" rel="stylesheet">
         <link href="/css/highlight.css" rel="stylesheet">
         <link href="/css/hangfire.css" rel="stylesheet">
