--- a/css/styles.css
+++ b/css/styles.css
@@ -364,3 +364,34 @@ pre .comm {
 .rss-link a {
     color: #bbb;
 }
+
+table {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+table>thead>tr>th, 
+table>tbody>tr>th, 
+table>tfoot>tr>th, 
+table>thead>tr>td, 
+table>tbody>tr>td, 
+table>tfoot>tr>td {
+    padding: 5px;
+    line-height: 1.42857143;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
+
+table>thead>tr>th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #ddd;
+}
+
+table>caption+thead>tr:first-child>th, 
+table>colgroup+thead>tr:first-child>th, 
+table>thead:first-child>tr:first-child>th, 
+table>caption+thead>tr:first-child>td, 
+table>colgroup+thead>tr:first-child>td, 
+table>thead:first-child>tr:first-child>td {
+    border-top: 0;
+}
