Optimize url structure, add redirects

--- a/_includes/blog/recent.html
+++ b/_includes/blog/recent.html
@@ -5,7 +5,7 @@
             <a href="/blog/">All Posts</a>
         </li>
         <li class="{% if page.title == 'Hangfire Releases' %}active{% endif %}">
-            <a href="/blog/releases/">Hangfire Releases</a>
+            <a href="/blog/releases.html">Hangfire Releases</a>
         </li>
     </ul>
     <div><h4>Recent Releases</h4></div>
