--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
               </button>
               {% if page.jumbotron == null %}
               <a class="navbar-brand" href="/">
-                {{ site.name }}
+                {{ site.title }}
               </a>
               {% endif %}
             </div>
