Use small avatar images from GitHub

--- a/_includes/blog/subtitle.html
+++ b/_includes/blog/subtitle.html
@@ -2,7 +2,7 @@
 	{% capture author %}{{ page.author }}{{ post.author }}{% endcapture %}
 	{% if author.size > 0 %}
 	<li>
-		<img src="https://github.com/{{ author }}.png" alt="{{ author }}" style="width: 30px;">
+		<img src="https://github.com/{{ author }}.png?size=60" alt="{{ author }}" style="width: 30px;">
 		by
 		<a style="font-weight: bold;" href="https://github.com/{{ author }}/">@{{ author }}</a>
 	</li>
