--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="footer">
   <div class="container">
     <div class="row hidden-print">
       <div class="col-sm-3 col-xs-6">
