--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -1,4 +1,4 @@
-footer {
+#footer {
     background-color: #eee;
     color: #747474;
     margin-top: 20px;
@@ -16,7 +16,7 @@ footer {
         margin-bottom: 220px;
     }
 
-    footer {
+    #footer {
         height: 185px;
         padding-bottom: 10px;
         position: absolute;
