--- a/css/styles.css
+++ b/css/styles.css
@@ -404,3 +404,8 @@ table>thead:first-child>tr:first-child>td {
 .supported-storages td {
     vertical-align: middle;
 }
+
+.customers blockquote {
+    font-size: 16px;
+    padding: 10px 18px;
+}
