--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -1,26 +1,23 @@
-<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
+{% unless page.hide_subscribe %}
 <div id="mc_embed_signup">
-<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0;" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h2 style="font-size: 30px;font-weight:normal;">Subscribe to updates</h2>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_d2f4abd4cd4d3b1db1b06dc02_5a8dbbc33b" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
+	<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0;" novalidate>
+		<h2 style="font-size: 30px;font-weight:normal;">Subscribe to updates</h2>
 
-<!--End mc_embed_signup-->
+		<p>
+			Subscribe to receive weekly blog updates. You are able to unsubscribe at any time.
+		</p>
+
+		<div class="input-group">
+    		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address">
+    		<span class="input-group-btn">
+	    		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-default">
+	    	</span>
+  		</div>
+  		
+		<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+	    <div style="position: absolute; left: -5000px;">
+			<input type="text" name="b_d2f4abd4cd4d3b1db1b06dc02_5a8dbbc33b" tabindex="-1" value="">
+		</div>
+	</form>
+</div>
+{% endunless %}
