--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -5,7 +5,7 @@ active: overview
 
 <div class="container">
     <div class="row">
-        <div class="col-md-3" role="complementary">
+        <div class="col-lg-3 col-md-4" role="complementary">
             <div class="bs-sidenav hidden-print">
                 <h4>Hangfire</h4>
                 <ul class="nav">
@@ -23,7 +23,7 @@ active: overview
                 </ul>
             </div>
         </div>
-        <div class="col-md-9" role="main">
+        <div class="col-lg-9 col-md-8" role="main">
             <article>
                 <h1 class="page-header">
                     {{ page.title }}
