--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,8 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="/js/lightbox.min.js"></script>
+        <script src="/js/imagelightbox.min.js"></script>
+        <script src="/js/hangfire.js"></script>
 
         {% include disqus.html %}
     </body>
