--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <meta name="twitter:site" content="@hangfireio">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Hangfire – Background Jobs for ASP.NET">
-        <meta name="twitter:description" content="Incredibly easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
+        <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/ui/dashboard-sm.png">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
