Newsletter is now monthly to keep traffic low

--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -4,7 +4,7 @@
 		<h2 style="font-size: 30px;font-weight:normal;">Subscribe to updates</h2>
 
 		<p>
-			Subscribe to receive weekly blog updates. You are able to unsubscribe at any time.
+			Subscribe to receive monthly blog updates. You are able to unsubscribe at any time.
 		</p>
 
 		<div class="input-group">
