Simplify the post creation

--- a/_includes/blog/subscribe.html
+++ b/_includes/blog/subscribe.html
@@ -3,11 +3,11 @@
 	<h4 style="borer-bottom: none;">Subscribe to updates</h4>
 	<div>
 		<p>
-			Subscribe to receive monthly blog updates. You are able to unsubscribe at any time.
+			Subscribe to receive monthly blog updates. Very low traffic, you can unsubscribe at any time.
 		</p>
 		<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate style="padding:0;margin-bottom:10px;">
 			<div class="input-group">
-	      		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address">
+	      		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="me@example.com">
 	      		<span class="input-group-btn">
 	        		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-default">
 	      		</span>
