--- a/_includes/blog/newsletter.html
+++ b/_includes/blog/newsletter.html
@@ -1,14 +1,14 @@
-{% unless page.hide_subscribe %}
-<div id="mc_embed_signup">
+{% if page.content.size > 2000 %}
+<div id="mc_embed_signup" style="padding: 20px; background-color: whitesmoke; margin: 0 -20px;">
 	<form action="//hangfire.us9.list-manage.com/subscribe/post?u=d2f4abd4cd4d3b1db1b06dc02&amp;id=5a8dbbc33b" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding:0;" novalidate>
-		<h2 style="font-size: 30px;font-weight:normal;">Subscribe to updates</h2>
+		<h2 style="font-size: 30px;font-weight:normal;margin-top:0;">Subscribe to updates</h2>
 
 		<p>
-			Subscribe to receive monthly blog updates. You are able to unsubscribe at any time.
+			Subscribe to receive monthly blog updates. Very low traffic, you are able to unsubscribe at any time.
 		</p>
 
 		<div class="input-group">
-    		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address">
+    		<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="me@example.com">
     		<span class="input-group-btn">
 	    		<input type="submit" value="Subscribe" name="subscribe" class="btn btn-default">
 	    	</span>
@@ -20,4 +20,4 @@
 		</div>
 	</form>
 </div>
-{% endunless %}
+{% endif %}
