--- a/_includes/blog/recent.html
+++ b/_includes/blog/recent.html
@@ -12,7 +12,7 @@
     <ul class="nav">
         {% for post in site.categories.release limit:5 %}
         <li class="{% if page.title == post.title %}active{% endif %}">
-            <a href="{{ post.url }}">{{ post.version }}</a>
+            <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
         {% endfor %}
     </ul>
