--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="/js/imagelightbox.min.js"></script>
+        <script src="/js/anchor.min.js"></script>
         <script src="/js/hangfire.js"></script>
 
         {% include disqus.html %}
