Remove unnecessary elements in index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,10 @@ pre .comm {
     display: inline-block;
 }
 
+.fb-share-button {
+    margin-right: 5px;
+}
+
 .fb-share-button > span {
     vertical-align: inherit!important;
 }
