Play with CDN 4: minify resources

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,7 @@
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/ui/dashboard-sm.png">
 
-        <link rel="stylesheet" href="http://cdn.hangfire.io/css/bootstrap.min.css">
-        <link href="http://cdn.hangfire.io/css/font-awesome.min.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/lightbox.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/highlight.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/hangfire.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://cdn.hangfire.io/css/hangfire.min.css">
 
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -78,11 +73,7 @@
         
         {% include footer.html %}
 
-        <script src="http://cdn.hangfire.io/js/jquery.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/bootstrap.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/imagelightbox.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/anchor.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/hangfire.js"></script>
+        <script src="http://cdn.hangfire.io/js/hangfire.min.js"></script>
 
         {% include disqus.html %}
     </body>
