Revert "Fix bootstrap.js path"
This reverts commit 8db4802162a88d588d15623afb102967589f1789.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
         {% include footer.html %}
 
         <script src="http://cdn.hangfire.io/js/jquery.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/bootstrap.min.js"></script>
+        <script src="http://cdn.hangfire.io/js/js/bootstrap.min.js"></script>
         <script src="http://cdn.hangfire.io/js/imagelightbox.min.js"></script>
         <script src="http://cdn.hangfire.io/js/anchor.min.js"></script>
         <script src="http://cdn.hangfire.io/js/hangfire.js"></script>
