Revert "Play with CDN, part 3"
This reverts commit 54b5b789cc4c403885ce015a16727a085664749c.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/ui/dashboard-sm.png">
 
-        <link rel="stylesheet" href="http://cdn.hangfire.io/css/bootstrap.min.css">
-        <link href="http://cdn.hangfire.io/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="http://cdn.hangfire.io/css/lightbox.css" rel="stylesheet">
         <link href="http://cdn.hangfire.io/css/highlight.css" rel="stylesheet">
         <link href="http://cdn.hangfire.io/css/hangfire.css" rel="stylesheet">
@@ -78,8 +78,8 @@
         
         {% include footer.html %}
 
-        <script src="http://cdn.hangfire.io/js/jquery.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="http://cdn.hangfire.io/js/imagelightbox.min.js"></script>
         <script src="http://cdn.hangfire.io/js/anchor.min.js"></script>
         <script src="http://cdn.hangfire.io/js/hangfire.js"></script>
