Revert "Play with CDN, just for fun"
This reverts commit cc09a65e5bea372ad2ec1083c0cb320e1492f717.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/lightbox.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/highlight.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/hangfire.css" rel="stylesheet">
-        <link href="http://cdn.hangfire.io/css/styles.css" rel="stylesheet">
+        <link href="/css/lightbox.css" rel="stylesheet">
+        <link href="/css/highlight.css" rel="stylesheet">
+        <link href="/css/hangfire.css" rel="stylesheet">
+        <link href="/css/styles.css" rel="stylesheet">
 
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -80,9 +80,9 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/imagelightbox.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/anchor.min.js"></script>
-        <script src="http://cdn.hangfire.io/js/hangfire.js"></script>
+        <script src="/js/imagelightbox.min.js"></script>
+        <script src="/js/anchor.min.js"></script>
+        <script src="/js/hangfire.js"></script>
 
         {% include disqus.html %}
     </body>
