Add sharing buttons
They are for me, to tweet about posts with ease :-)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,5 +85,7 @@
         <script src="/js/hangfire.js"></script>
 
         {% include disqus.html %}
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-560d5ca2d7659418" async="async"></script>
+
     </body>
 </html>
