--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,8 @@ comments: true
 			<article itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
   				{{ content }}
 			</article>
+			
+            <div style="margin-top: 20px;" class="addthis_sharing_toolbox"></div>
 
 			{% include blog/newsletter.html %}
 
