--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ comments: true
   				{{ content }}
 			</article>
 			
-            <div style="margin-top: 20px;" class="addthis_sharing_toolbox"></div>
+            <div style="margin: 20px 0;" class="addthis_sharing_toolbox"></div>
 
 			{% include blog/newsletter.html %}
 
