--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,3 +39,6 @@ comments: true
 		</div>
 	</div>
 </div>
+
+{% include disqus.html %}
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-560d5ca2d7659418" async="async"></script>
