--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/twitter-crd.png">
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="/css/lightbox.css" rel="stylesheet">
-        <link href="/css/highlight.css" rel="stylesheet">
+        <link href="//cdn.hangfire.io/css/bootstrap.min.css" rel="stylesheet">
+        <link href="//cdn.hangfire.io/css/font-awesome.min.css" rel="stylesheet">
+        <link href="//cdn.hangfire.io/css/lightbox.css" rel="stylesheet">
+        <link href="//cdn.hangfire.io/css/highlight.css" rel="stylesheet">
         <link href="/css/hangfire.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
 
@@ -69,10 +69,10 @@
         
         {% include footer.html %}
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="/js/imagelightbox.min.js"></script>
-        <script src="/js/anchor.min.js"></script>
+        <script src="//cdn.hangfire.io/js/jquery.min.js"></script>
+        <script src="//cdn.hangfire.io/js/bootstrap.min.js"></script>
+        <script src="//cdn.hangfire.io/js/imagelightbox.min.js"></script>
+        <script src="//cdn.hangfire.io/js/anchor.min.js"></script>
         <script src="/js/hangfire.js"></script>
     </body>
 </html>
