Use CDN for all the resources

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,12 @@
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/twitter-crd.png">
 
-        <link href="//cdn.hangfire.io/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//cdn.hangfire.io/css/font-awesome.min.css" rel="stylesheet">
-        <link href="//cdn.hangfire.io/css/lightbox.css" rel="stylesheet">
-        <link href="//cdn.hangfire.io/css/highlight.css" rel="stylesheet">
-        <link href="/css/hangfire.css" rel="stylesheet">
-        <link href="/css/styles.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/font-awesome.min.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/lightbox.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/highlight.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/hangfire.css" rel="stylesheet">
+        <link href="{{ site.cdn }}/css/styles.css" rel="stylesheet">
 
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -69,10 +69,10 @@
         
         {% include footer.html %}
 
-        <script src="//cdn.hangfire.io/js/jquery.min.js"></script>
-        <script src="//cdn.hangfire.io/js/bootstrap.min.js"></script>
-        <script src="//cdn.hangfire.io/js/imagelightbox.min.js"></script>
-        <script src="//cdn.hangfire.io/js/anchor.min.js"></script>
-        <script src="/js/hangfire.js"></script>
+        <script src="{{ site.cdn }}/js/jquery.min.js"></script>
+        <script src="{{ site.cdn }}/js/bootstrap.min.js"></script>
+        <script src="{{ site.cdn }}/js/imagelightbox.min.js"></script>
+        <script src="{{ site.cdn }}/js/anchor.min.js"></script>
+        <script src="{{ site.cdn }}/js/hangfire.js"></script>
     </body>
 </html>
