Replace http with https where possible

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
     <a href="http://docs.hangfire.io/">Documentation</a>
   </li>
   <li>
-    <a href="http://discuss.hangfire.io">Forum</a>
+    <a href="https://discuss.hangfire.io">Forum</a>
   </li>
   <li {% if page.active == 'blog' %}class="active"{% endif %}>
     <a href="/blog/">Blog</a>
