--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
       <div class="col-sm-3 col-xs-6">
         <h4>Community</h4>
         <ul class="list-unstyled">
-          <li><a href="http://discuss.hangfire.io/">Forum</a></li>
+          <li><a href="https://discuss.hangfire.io/">Forum</a></li>
           <li><a href="https://github.com/HangfireIO">Projects on GitHub</a></li>
           <li><a href="http://stackoverflow.com/tags/hangfire">Stack Overflow</a></li>
         </ul>
