--- a/css/styles.css
+++ b/css/styles.css
@@ -131,11 +131,11 @@ pre .comm {
     display: inline-block;
 }
 
-.fb-share-button, .twitter-share-button {
+.fb-share-button, .twitter-share-button, .fb-like {
     margin-right: 5px;
 }
 
-.fb-share-button > span {
+.fb-share-button > span, .fb-like > span {
     vertical-align: inherit!important;
 }
 
