Open "edit" links in separate windows

--- a/_includes/edit.html
+++ b/_includes/edit.html
@@ -4,4 +4,4 @@
   {% assign path = page.path %}
 {% endif %}
 
-<i class="glyphicon glyphicon-pencil"></i>&nbsp;<a href="{{ site.github_repo }}/edit/{{ site.github_branch }}/{{ path }}">Edit on GitHub</a>
+<i class="glyphicon glyphicon-pencil"></i>&nbsp;<a href="{{ site.github_repo }}/edit/{{ site.github_branch }}/{{ path }}" target="_blank">Edit on GitHub</a>
