--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
       <div class="col-sm-3 col-xs-6">
         <h4>Documentation</h4>
         <ul class="list-unstyled">
-          <li><a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a></li>
-          <li><a href="http://docs.hangfire.io/en/latest/users-guide/index.html">User's Guide</a></li>
+          <li><a href="http://docs.hangfire.io/en/latest/quick-start.html">Quick Start</a></li>
+          <li><a href="http://docs.hangfire.io/en/latest/index.html">User's Guide</a></li>
           <li><a href="http://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
         </ul>
       </div>
