--- a/_includes/blog/post_item.html
+++ b/_includes/blog/post_item.html
@@ -6,7 +6,7 @@
 <article itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
 	{{ post.excerpt }}
 	
-	<a class="btn btn-sm btn-default" href="{{ post.url }}">Read more &rarr;</a>
+	<a class="btn btn-sm btn-default" href="{{ post.url }}">Continue Reading &rarr;</a>
 </article>
 
 <hr class="post-separator">
