--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         {% endif %}
         <meta name="twitter:site" content="@hangfireio">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="Hangfire – Background Jobs for ASP.NET">
+        <meta name="twitter:title" content="Hangfire – Background Jobs for .NET and .NET Core">
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/twitter-crd.png">
 
