Remove navbar border and increase jumbotron paddings

--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -27,7 +27,7 @@
 .navbar-hangfire {
     margin-bottom: 30px;
     background-color: #eee;
-    border-bottom: solid 2px #ccc;
+    border: none;
 }
 
 .navbar-hangfire .navbar-nav .active>a, 
