Decrease the heading burden

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,7 +10,7 @@ layout: default
 					<i class="fa fa-rss"></i>
 					<a href="http://feeds.feedburner.com/hangfireio">rss feed</a>
 				</span>
-				{{ page.title }}
+				{{ page.subtitle }}
 			</h1>
 			<div class="posts">
 				{{ content }}
