--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,13 @@ active: blog
 			<article itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
   				{{ content }}
 			</article>
+
+			{% if page.origin %}
+			<a class="btn btn-sm btn-primary" href="{{ post.origin }}" target="_blank">
+				Continue Reading on @{{ page.author }}'s Blog
+				<i class="fa fa-external-link" aria-hidden="true"></i>
+			</a>
+			{% endif %}
 			
             <div style="margin: 20px 0;" class="addthis_sharing_toolbox"></div>
 
