--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ active: blog
 			</article>
 
 			{% if page.origin %}
-			<a class="btn btn-sm btn-primary" href="{{ post.origin }}" target="_blank">
+			<a class="btn btn-sm btn-primary" href="{{ page.origin }}" target="_blank">
 				Continue Reading on @{{ page.author }}'s Blog
 				<i class="fa fa-external-link" aria-hidden="true"></i>
 			</a>
