--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
         <meta name="twitter:title" content="Hangfire – Background Jobs for .NET and .NET Core">
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="{{ site.cdn }}/img/twitter-crd.png">
+        
+        <link href="{{ site.url }}{{ page.url }}" rel="canonical">
 
         <link href="{{ site.cdn }}/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ site.cdn }}/css/font-awesome.min.css" rel="stylesheet">
