--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Hangfire – Background Jobs for .NET and .NET Core">
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
-        <meta name="twitter:image:src" content="{{ site.cdn }}/img/twitter-crd.png">
+        <meta name="twitter:image:src" content="{{ site.url }}/img/twitter-crd.png">
         <meta property="og:url" content="http://hangfire.io" />
         
         <!--link href="{{ site.url }}{{ page.url }}" rel="canonical"-->
