New pricing plans for Hangfire subscriptions

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -19,7 +19,8 @@ active: overview
                 <ul class="nav nav-list">
                     <li {% if page.sub_active == 'pro-overview' %}class="active"{% endif %}><a href="/pro/">Overview</a></li>
                     <li {% if page.sub_active == 'pro-downloads' %}class="active"{% endif %}><a href="/pro/downloads.html">Downloads</a></li>
-                    <li {% if page.sub_active == 'pro-license' %}class="active"{% endif %}><a href="/pro/license.html">Licensing</a></li>
+                    <li {% if page.sub_active == 'pro-license' %}class="active"{% endif %}><a href="/pro/license.html">Standard EULA</a></li>
+                    <li {% if page.sub_active == 'royalty-free-eula' %}class="active"{% endif %}><a href="/pro/royalty-free-eula.html">Royalty-free EULA</a></li>
                 </ul>
             </div>
         </div>
