Anonymize IP addresses in GA

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
   ga('send', 'pageview');
   ga('require', 'linker');
   ga('linker:autoLink', ['fastspring.com']);
+  ga('set', 'anonymizeIp', true);
 </script>
     </head>
     <body>
