--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -11,7 +11,7 @@ active: overview
                 <ul class="nav">
                     <li {% if page.sub_active == 'overview' %}class="active"{% endif %}><a href="/overview.html">Overview</a></li>
                     <li {% if page.sub_active == 'features' %}class="active"{% endif %}><a href="/features.html">Features</a></li>
-                    <li {% if page.sub_active == 'licensing' %}class="active"{% endif %}><a href="/licensing.html">Licensing</a></li>
+                    <li {% if page.sub_active == 'licenses' %}class="active"{% endif %}><a href="/licenses.html">Licenses</a></li>
                     <li {% if page.sub_active == 'downloads' %}class="active"{% endif %}><a href="/downloads.html">Downloads</a></li>
                     <li {% if page.sub_active == 'extensions' %}class="active"{% endif %}><a href="/extensions.html">Extensions</a></li>
                 </ul>
@@ -19,8 +19,14 @@ active: overview
                 <ul class="nav nav-list">
                     <li {% if page.sub_active == 'pro-overview' %}class="active"{% endif %}><a href="/pro/">Overview</a></li>
                     <li {% if page.sub_active == 'pro-downloads' %}class="active"{% endif %}><a href="/pro/downloads.html">Downloads</a></li>
-                    <li {% if page.sub_active == 'pro-license' %}class="active"{% endif %}><a href="/pro/license.html">Standard EULA</a></li>
-                    <li {% if page.sub_active == 'royalty-free-eula' %}class="active"{% endif %}><a href="/pro/royalty-free-eula.html">Royalty-free EULA</a></li>
+                    <li {% if page.sub_active == 'pro-licenses' %}class="active"{% endif %}><a href="/pro/licenses.html">Licenses</a></li>
+                </ul>
+                <h4>Licensing</h4>
+                <ul class="nav nav-list">
+                    <li {% if page.sub_active == 'lgpl' %}class="active"{% endif %}><a href="/licensing/lgpl.html">LGPLv3</a></li>
+                    <li {% if page.sub_active == 'standard' %}class="active"{% endif %}><a href="/licensing/standard.html">Standard EULA</a></li>
+                    <li {% if page.sub_active == 'royalty-free' %}class="active"{% endif %}><a href="/licensing/royalty-free.html">Royalty-free EULA</a></li>
+                    <li {% if page.sub_active == 'third-party' %}class="active"{% endif %}><a href="/licensing/third-party.html">Third Party Notices</a></li>
                 </ul>
             </div>
         </div>
