--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
     <a href="/pricing/">Pricing</a>
   </li>
   <li>
-    <a href="http://docs.hangfire.io/">Documentation</a>
+    <a href="https://docs.hangfire.io/">Documentation</a>
   </li>
   <li>
     <a href="https://discuss.hangfire.io">Forum</a>
