--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,9 +12,9 @@
       <div class="col-sm-3 col-xs-6">
         <h4>Documentation</h4>
         <ul class="list-unstyled">
-          <li><a href="http://docs.hangfire.io/en/latest/quick-start.html">Quick Start</a></li>
-          <li><a href="http://docs.hangfire.io/en/latest/index.html">User's Guide</a></li>
-          <li><a href="http://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
+          <li><a href="https://docs.hangfire.io/en/latest/quick-start.html">Quick Start</a></li>
+          <li><a href="https://docs.hangfire.io/en/latest/index.html">User's Guide</a></li>
+          <li><a href="https://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
         </ul>
       </div>
       <div class="col-sm-3 col-xs-6">
@@ -22,13 +22,13 @@
         <ul class="list-unstyled">
           <li><a href="https://discuss.hangfire.io/">Forum</a></li>
           <li><a href="https://github.com/HangfireIO">Projects on GitHub</a></li>
-          <li><a href="http://stackoverflow.com/tags/hangfire">Stack Overflow</a></li>
+          <li><a href="https://stackoverflow.com/tags/hangfire">Stack Overflow</a></li>
         </ul>
       </div>
       <div class="col-sm-3 col-xs-6">
         <h4>Contact</h4>
         <ul class="list-unstyled">
-          <li><a href="http://eepurl.com/9iQNf" target="_blank">Newsletter</a></li>
+          <li><a href="https://eepurl.com/9iQNf" target="_blank">Newsletter</a></li>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="https://twitter.com/hangfireio">Twitter</a></li>
           <li><a href="mailto:support@hangfire.io">Support</a></li>
