--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <meta name="twitter:title" content="Hangfire – Background Jobs for .NET and .NET Core">
         <meta name="twitter:description" content="An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="{{ site.url }}/img/twitter-crd.png">
-        <meta property="og:url" content="http://hangfire.io" />
+        <meta property="og:url" content="https://www.hangfire.io" />
         
         <!--link href="{{ site.url }}{{ page.url }}" rel="canonical"-->
 
@@ -32,7 +32,7 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/hangfireio">
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="https://feeds.feedburner.com/hangfireio">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
