Update link to getting started articles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <div class="col-sm-3 col-xs-6">
         <h4>Documentation</h4>
         <ul class="list-unstyled">
-          <li><a href="https://docs.hangfire.io/en/latest/quick-start.html">Quick Start</a></li>
+          <li><a href="https://docs.hangfire.io/en/latest/getting-started/index.html">Getting Started</a></li>
           <li><a href="https://docs.hangfire.io/en/latest/index.html">User's Guide</a></li>
           <li><a href="https://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
         </ul>
