--- a/_includes/blog/subtitle.html
+++ b/_includes/blog/subtitle.html
@@ -33,5 +33,5 @@
 	</li>
 	{% endif %}
 
-	<li class="pull-right">{% include edit.html %}</li>
+	<li class="hidden-xs pull-right">{% include edit.html %}</li>
 </ul>
