--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -21,6 +21,12 @@ active: overview
                     <li {% if page.sub_active == 'pro-downloads' %}class="active"{% endif %}><a href="/pro/downloads.html">Downloads</a></li>
                     <li {% if page.sub_active == 'pro-licenses' %}class="active"{% endif %}><a href="/pro/licenses.html">Licenses</a></li>
                 </ul>
+                <h4>Hangfire Ace</h4>
+                <ul class="nav nav-list">
+                    <li {% if page.sub_active == 'ace-overview' %}class="active"{% endif %}><a href="/ace/">Overview</a></li>
+                    <li {% if page.sub_active == 'ace-downloads' %}class="active"{% endif %}><a href="/ace/downloads.html">Downloads</a></li>
+                    <li {% if page.sub_active == 'ace-licenses' %}class="active"{% endif %}><a href="/ace/licenses.html">Licenses</a></li>
+                </ul>
                 <h4>Licensing</h4>
                 <ul class="nav nav-list">
                     <li {% if page.sub_active == 'lgpl' %}class="active"{% endif %}><a href="/licensing/lgpl.html">LGPLv3</a></li>
