--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
         <ul class="list-unstyled">
           <li><a href="/overview.html">Hangfire</a></li>
           <li><a href="/pro/">Hangfire Pro</a></li>
+          <li><a href="/ace/">Hangfire Ace</a></li>
           <li><a href="/pricing/">Pricing</a></li>
         </ul>
       </div>
