--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,14 +33,14 @@
         <ul class="list-unstyled">
           <li><a href="https://eepurl.com/9iQNf" target="_blank">Newsletter</a></li>
           <li><a href="/blog/">Blog</a></li>
-          <li><a href="https://twitter.com/hangfireio">Twitter</a></li>
+          <li><a href="https://twitter.com/hangfireio" target="_blank">Twitter</a></li>
           <li><a href="mailto:support@hangfire.io">Support</a></li>
         </ul>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        &copy; 2013-2019 <a href="https://github.com/odinserj">Sergey Odinokov</a>
+        &copy; 2013-2019 <a href="https://github.com/odinserj" target="_blank">Sergey Odinokov</a>
       </div>
     </div>
   </div>
