Add default favicon to prevent unnecessary requests

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
         {% if page.description %}
         <meta name="description" content="{{ page.description }}">
         {% endif %}
+        <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
         <meta name="twitter:site" content="@hangfireio">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Hangfire – Background Jobs for .NET and .NET Core">
