--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
         <![endif]-->
 
         <link rel="alternate" type="application/rss+xml" title="RSS" href="https://feeds.feedburner.com/hangfireio">
+        <link rel="dns-prefetch" href="//www.google-analytics.com">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
